--- a/src/secureroot/v5-css/scss/top-tasks.scss
+++ b/src/secureroot/v5-css/scss/top-tasks.scss
@@ -35,7 +35,7 @@ clear: both;
 #pagination {
 width: 100%;
 float: left;
-margin-top: 10px;
+margin-bottom: 20px;
 }
 
 #pagination ul li {
